--- a/sfmltest/sfmltest.vcxproj
+++ b/sfmltest/sfmltest.vcxproj
@@ -133,8 +133,8 @@
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="sfmltest.cpp" />
   </ItemGroup>
@@ -142,6 +142,8 @@
     <ClInclude Include="Block.h" />
     <ClInclude Include="Box.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Menu.h" />
+    <ClInclude Include="Misc.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="Room.h" />
