--- a/sfmltest/sfmltest.vcxproj
+++ b/sfmltest/sfmltest.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="Block.h" />
     <ClInclude Include="Box.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="MapBuilder.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Misc.h" />
     <ClInclude Include="Player.h" />
