--- a/sfmltest/sfmltest.vcxproj.filters
+++ b/sfmltest/sfmltest.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="Misc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MapBuilder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
